--- a/parallel_mcts_research/client/index.html
+++ b/parallel_mcts_research/client/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
+<meta charset="utf-8">
+<head>	
 	<title>Five In Row</title>
 	<link rel="stylesheet" href="style.css" >
+	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 	<script src="start.js"></script>
 </head>
 <body>
@@ -11,6 +11,10 @@
 	<div id="game">
 		<canvas id="gameboard" width="200" height="200"></canvas>
     	<p id="status">No Connection<p/> <p id="more-client"></p>
-	</div>
+	</div>	
+	
+	<script>	
+	</script>
 </body>
+<svg width="960" height="2400"></svg>
 </html>
