--- a/parallel_mcts_research/client/index.html
+++ b/parallel_mcts_research/client/index.html
@@ -3,18 +3,36 @@
 <head>	
 	<title>Five In Row</title>
 	<link rel="stylesheet" href="style.css" >
-	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="start.js"></script>
+	<style>
+	.node {
+    cursor: pointer;
+}
+.node circle {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+.node text {
+    font: 10px sans-serif;
+}
+.link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 1.5px;
+}
+
+body {
+    overflow: hidden;
+}
+	</style
 </head>
 <body>
 	<h3 id="stones" align="center"></h3>
 	<div id="game">
-		<canvas id="gameboard" width="200" height="200"></canvas>
-    	<p id="status">No Connection<p/> <p id="more-client"></p>
+		<canvas id="gameboard" width="200" height="200"></canvas>    	
 	</div>	
-	
-	<script>	
-	</script>
+	<div id="body"></div>
 </body>
-<svg width="960" height="2400"></svg>
 </html>
