調整程式碼結構

--- a/parallel_mcts_research/client/index.html
+++ b/parallel_mcts_research/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>	
-	<title>Five In Row</title>
+	<title>Gomoku</title>
 	<link rel="stylesheet" href="style.css" >
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="start.js"></script>
